# repolib

./: .cz.toml  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  README.rst  SECURITY.md  TESTING.md  apt-manage-spec.rst  pyproject.toml  quick-install.sh  requirements.txt  setup.cfg  setup.py  setup.py.orig  test.html
data/: apt-manage  org.pop_os.repolib.conf  org.pop_os.repolib.policy  org.pop_os.repolib.service  service.py
data/bash-completion/: apt-manage
data/zsh-completion/: _apt-manage
debian/: README.source  changelog  control  copyright  install  postinst  prerm  rules  triggers
docs/: conf.py  deb822-format.rst  index.rst  installation.rst
docs/apt-manage/: apt-manage.rst
docs/apt-manage/add/: apt-manage-add.rst
docs/aptmanage/: add.rst  aptmanage.rst  convert.rst  key.rst  list.rst  modify.rst  remove.rst  repo.rst  source.rst
repolib/: __init__.py  __version__.py  deb.py  deb_test.py  file.py  gpg.py  key.py  legacy_deb.py  legacy_deb_test.py  parsedeb.py  popdev.py  ppa.py  ppa_test.py  source.py  source_test.py  system.py  system_test.py  util.py
repolib/command/: __init__.py  add.py  argparser.py  command.py  key.py  list.py  modify.py  remove.py  source.py
repolib/shortcuts/: __init__.py  popdev.py  ppa.py
repolib/unittest/: source.py  test_parsedeb.py  test_ppa.py  test_source.py
src/repolib/: __version__.py  file.py  key.py  source.py  system.py
src/repolib/command/: __init__.py  add.py  bin.py  list.py  remove.py
src/repolib/shortcuts/: popdev.py  ppa.py
src/repolib/unittest/: pytest.ini  test_key.py  test_parsedeb.py  test_popdev.py
