[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Repolib"
version = "2.2.0"
authors = [
    { name="Ian Santopietro", email="ian@system76.com" }
]
description = "Easily manage software sources"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    'Environment :: Console',
    'Intended Audience :: System Administrators',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
    'Natural Language :: English',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: System'
]

[project.urls]
"Homepage" = "https://github.com/isantop/crashbang"
"Bug Tracker" = "https://github.com/isantop/crashbang/issues"

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.2.0"
version_files = [
    "pyproject.toml:^version",
    "setup.cfg:^version",
    "repolib/__version__.py:__version__"
]
tag_format = "$version"
major_version_zero = true